--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "typescript-web-application",
+  "name": "raycasting",
   "version": "0.0.0",
-  "description": "A TypeScript web application template that can be used as a seed for new projects",
+  "description": "Experiment in rendering using raycasting",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -39,23 +39,23 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.2.0",
-    "@commitlint/config-conventional": "^8.2.0",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "11.0.0",
     "@nuclearredeye/eslint-config": "1.1.0",
-    "@types/jest": "^26.0.13",
-    "eslint": "^6.8.0",
-    "husky": "^3.0.8",
-    "jest": "^26.4.2",
+    "@types/jest": "^26.0.19",
+    "eslint": "^7.16.0",
+    "husky": "^4.3.6",
+    "jest": "^26.6.3",
     "live-server": "^1.2.1",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.1.0",
+    "rollup": "^2.35.1",
     "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "standard-version": "^8.0.1",
-    "ts-jest": "^26.3.0",
-    "typescript": "^4.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "standard-version": "^9.0.0",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
   }
 }
