--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,18 +10,18 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - name: Setup
-        run: |
-          npm install
       - name: Build
         run: |
-          npm run build
+          make build
+      - name: Format
+        run: |
+          make format
       - name: Lint
         run: |
-          npm run lint
+          make lint
       - name: Test
         run: |
-          npm run test
+          make test
       - name: Publish as 'unstable'
         if: github.ref == 'refs/heads/master'
         run: |
