--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "raycasting",
   "version": "0.0.0",
   "description": "Experiment in rendering using ray casting",
-  "main": "index.js",
+  "main": "index.html",
   "type": "module",
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "rimraf out",
     "build": "tsc",
     "postbuild": "rollup --config",
-    "clean": "rimraf dist",
-    "distclean": "rimraf dist node_modules",
+    "clean": "rimraf out",
+    "distclean": "rimraf out node_modules",
     "watch:src": "tsc --watch",
     "watch:assets": "nodemon -w './src' -e 'html,css,png,jpg' -x 'rollup --config'",
-    "debug": "live-server --port=5000 --no-browser ./dist/debug/",
+    "debug": "live-server --port=5000 --no-browser ./out/debug/",
     "start": "npm-run-all build --parallel debug watch:* debug",
     "lint": "eslint ./src --ext .js,.ts",
     "test": "jest",
