--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "rollup": "^2.35.1",
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.32.8",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
