--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,7 +30,7 @@
       "type": "chrome",
       "request": "launch",
       "url": "http://localhost:8080",
-      "webRoot": "${workspaceRoot}/dist/debug"
+      "webRoot": "${workspaceRoot}/out/debug"
     }
   ],
   "compounds": [
