--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "rollup": "^2.35.1",
+    "terser": "^5.6.1",
     "sass": "^1.32.8",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.4.4",
