--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,12 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
       - name: Build
         run: |
-          make build
+          make release
       - name: Format
         run: |
           make format
