--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "name": "raycasting",
   "version": "0.0.0",
-  "description": "Experiment in rendering using ray casting",
-  "main": "index.html",
+  "description": "Experiment to learn about rendering using ray casting",
   "type": "module",
-  "scripts": {
-    "release": "standard-version"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/NuclearRedeye/raycasting.git"
