--- a/package.json
+++ b/package.json
@@ -1,60 +1,24 @@
 {
   "name": "raycasting",
   "version": "0.0.0",
-  "description": "Experiment in rendering using ray casting",
-  "main": "index.js",
+  "description": "Experiment to learn about rendering using ray casting",
   "type": "module",
-  "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "tsc",
-    "postbuild": "rollup --config",
-    "clean": "rimraf dist",
-    "distclean": "rimraf dist node_modules",
-    "watch:src": "tsc --watch",
-    "watch:assets": "nodemon -w './src' -e 'html,css,png,jpg' -x 'rollup --config'",
-    "debug": "live-server --port=5000 --no-browser ./dist/debug/",
-    "start": "npm-run-all build --parallel debug watch:* debug",
-    "lint": "eslint ./src --ext .js,.ts",
-    "test": "jest",
-    "release": "standard-version"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NuclearRedeye/typescript-web-application.git"
+    "url": "git+https://github.com/NuclearRedeye/raycasting.git"
   },
   "author": "NuclearRedeye",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/NuclearRedeye/typescript-web-application/issues"
-  },
-  "homepage": "https://github.com/NuclearRedeye/typescript-web-application#readme",
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
+  "homepage": "https://github.com/NuclearRedeye/raycasting#readme",
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "11.0.0",
-    "@nuclearredeye/eslint-config": "1.1.0",
+    "@nuclearredeye/eslint-config": "1.1.3",
     "@types/jest": "^26.0.19",
-    "eslint": "^7.16.0",
-    "husky": "^4.3.6",
+    "eslint": "^7.23.0",
     "jest": "^26.6.3",
-    "live-server": "^1.2.1",
-    "nodemon": "^2.0.6",
-    "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
-    "rimraf": "^3.0.2",
     "rollup": "^2.35.1",
-    "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "standard-version": "^9.0.0",
+    "terser": "^5.6.1",
+    "sass": "^1.32.8",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   }
