--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           docker login -u $DOCKER_USERNAME -p $DOCKER_TOKEN
           docker build --no-cache -t $DOCKER_USERNAME/$REPO_NAME:$GITHUB_SHA -t $DOCKER_USERNAME/$REPO_NAME:unstable .
-          docker push $DOCKER_USERNAME/$REPO_NAME
+          docker push --all-tags $DOCKER_USERNAME/$REPO_NAME
         env:
           REPO_NAME: ${{ github.event.repository.name }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
@@ -41,7 +41,7 @@ jobs:
         run: |
           docker login -u $DOCKER_USERNAME -p $DOCKER_TOKEN
           docker build --no-cache -t $DOCKER_USERNAME/$REPO_NAME:${GITHUB_REF/refs\/tags\/v/} -t $DOCKER_USERNAME/$REPO_NAME:stable -t $DOCKER_USERNAME/$REPO_NAME:latest .
-          docker push $DOCKER_USERNAME/$REPO_NAME
+          docker push --all-tags $DOCKER_USERNAME/$REPO_NAME
         env:
           REPO_NAME: ${{ github.event.repository.name }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
