feat: import updated engine from ludumdare48

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "raycasting",
   "version": "0.0.0",
-  "description": "Experiment to learn about rendering using ray casting",
+  "description": "A simple ray casting engine built using TypeScript",
   "type": "module",
   "repository": {
     "type": "git",
