--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -5,10 +5,10 @@ updates:
     schedule:
       interval: "weekly"
     commit-message:
-      prefix: "chore(deps)"
+      prefix: "chore(deps): "
   - package-ecosystem: "docker"
     directory: "/"
     schedule:
       interval: "weekly"
     commit-message:
-      prefix: "chore(deps)"
+      prefix: "chore(deps): "
